# parqu

./: parqu.py  pyproject.toml  readme.adoc  requirements.txt
